--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -13,10 +13,10 @@
         cursor: grab;
         width: 80%; /* Adjusted size to be 80% smaller */
         height: auto; /* Automatically adjust height to maintain aspect ratio */
-        max-width: 100px; /* Set a maximum width to prevent excessive shrinking */    
+/*         max-width: 100px; /* Set a maximum width to prevent excessive shrinking */     */
         border: solid 2px black;
         border-radius:10px;
-        margin-right: 10px; /* Add some margin between cards */
+/*         margin-right: 10px; /* Add some margin between cards */ */
     }
 </style>
 </head>
