--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -12,7 +12,7 @@
     .draggable img {
        
 /*         position: absolute; */
-        cursor: grab;
+/*         cursor: grab; */
         width: 80%; /* Adjusted size to be 80% smaller */
         height: auto; /* Automatically adjust height to maintain aspect ratio */
         max-width: 100px; /* Set a maximum width to prevent excessive shrinking */    
