--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -21,6 +21,10 @@
         border: solid 2px black;
         border-radius: 10px;
     }
+     img {
+        z-index: -1;
+    }
+    
 </style>
 </head>
 <body>
