--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -13,6 +13,7 @@
         cursor: grab;
         margin: 5px; /* added margin to separate the cards */
         position: relative;
+        z-index: 1;
     }
     .draggable img {
         width: 100%;
