--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -10,7 +10,7 @@
         display: flex;
     }
     .draggable {
-        cursor: grab;
+/*         cursor: grab; */
         margin: 5px; /* added margin to separate the cards */
         position: relative;
         z-index: 2;
