--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -178,8 +178,8 @@ function startDrag(e) {
     const offsetX = 0;
     const offsetY = 0;
     function moveCard(event) {
-        draggableCard.style.left = (event.clientX - offsetX) + 'px';
-        draggableCard.style.top = (event.clientY - offsetY) + 'px';
+        draggableCard.style.left = (event.clientX * offsetX) + 'px';
+        draggableCard.style.top = (event.clientY * offsetY) + 'px';
     }
 
     function stopDrag() {
