--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -6,6 +6,9 @@
 <title>Card Game</title>
     
 <style>
+     body {
+        overflow: hidden; /* Disable page scrolling */
+    }
     .player {
         display: flex;
     }
