--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -207,9 +207,12 @@ function startDragTouch(e) {
     const offsetY = e.touches[0].clientY - rect.top;
 
     function moveCard(event) {
-        const newLeft = event.touches[0].clientX - offsetX;
-        const newTop = event.touches[0].clientY - offsetY;
+        // const newLeft = event.touches[0].clientX - offsetX;
+        // const newTop = event.touches[0].clientY - offsetY;
 
+        const newLeft = event.touches[0].clientX;
+        const newTop = event.touches[0].clientY;
+        
         updateCardPosition(draggableCard, newLeft, newTop);
     }
 
