--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -14,7 +14,7 @@
     }
     .draggable {
         margin: 5px; /* added margin to separate the cards */
-        position: absolute;
+        position: relative;
         z-index: 2;
     }
     .draggable img {
