--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -10,7 +10,7 @@
         overflow: hidden; /* Disable page scrolling */
     }
     .player {
-        display: flex;
+/*         display: flex; */
     }
     .draggable {
         margin: 5px; /* added margin to separate the cards */
