--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -13,6 +13,7 @@
 /*         display: flex; */
     }
     .draggable {
+        position: absolute;
         margin: 5px; /* added margin to separate the cards */
         position: relative;
         z-index: 2;
