--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -14,6 +14,8 @@
     }
     .draggable {
         position: absolute;
+        left: 0;
+        top: 0;
         margin: 5px; /* added margin to separate the cards */
         position: relative;
         z-index: 2;
