--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -10,6 +10,7 @@
         overflow: hidden; /* Disable page scrolling */
     }
     .player {
+        position: absolute;
 /*         display: flex; */
     }
     .draggable {
