--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -14,7 +14,7 @@
 /*         display: flex; */
     }
     .draggable {
-        position: absolute;
+/*         position: absolute; */
         left: 0;
         top: 0;
         margin: 5px; /* added margin to separate the cards */
