--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -14,7 +14,7 @@
 /*         display: flex; */
     }
     .draggable {
-        margin-left: -50px; /* Adjust margin to control overlap */
+/*         margin-left: -50px; /* Adjust margin to control overlap */ */
         position: relative;
         z-index: 2;
     }
