--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -10,7 +10,7 @@
         overflow: hidden; /* Disable page scrolling */
     }
     .player {
-        position: absolute;
+        position: relative;
 /*         display: flex; */
     }
     .draggable {
