--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -16,6 +16,8 @@
     .draggable {
 /*         margin-left: -50px; /* Adjust margin to control overlap */ */
         position: relative;
+        top: 50px;
+        left: 50px;
         z-index: 2;
     }
     .draggable img {
