--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -10,12 +10,12 @@
         overflow: hidden; /* Disable page scrolling */
     }
     .player {
-        position: relative;
+        position: absolute;
 /*         display: flex; */
     }
     .draggable {
 /*         margin-left: -50px; /* Adjust margin to control overlap */ */
-        position: absolute;
+/*         position: absolute; */
         top: 50px;
         left: 50px;
         z-index: 2;
