--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -15,7 +15,7 @@
     }
     .draggable {
 /*         margin-left: -50px; /* Adjust margin to control overlap */ */
-/*         position: absolute; */
+        position: absolute;
         top: 50px;
         left: 50px;
         z-index: 2;
