--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -16,8 +16,8 @@
     .draggable {
 /*         margin-left: -50px; /* Adjust margin to control overlap */ */
         position: absolute;
-        top: 50px;
-        left: 50px;
+/*         top: 50px;
+        left: 50px; */
         z-index: 2;
     }
     .draggable img {
