--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -10,8 +10,8 @@
         overflow: hidden; /* Disable page scrolling */
     }
     .player {
-        position: absolute;
-/*         display: flex; */
+/*         position: absolute; */
+        display: flex;
     }
     .draggable {
 /*         margin-left: -50px; /* Adjust margin to control overlap */ */
