--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -12,6 +12,7 @@
     .player {
 /*         position: absolute; */
         display: flex;
+        margin-left: 200px;
     }
     .draggable {
 /*         margin: 50px; /* Adjust margin to control overlap */ */
