--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -6,13 +6,18 @@
 <title>Card Game</title>
     
 <style>
+    * {
+    user-select: none;
+    }
+
     body {
         overflow: hidden; /* Disable page scrolling */
+        
     }
     .player {
 /*         position: absolute; */
         display: flex;
-        margin-left: 200px;
+        padding-left: 200px;
     }
     .draggable {
 /*         margin: 50px; /* Adjust margin to control overlap */ */
