--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -17,7 +17,7 @@
     .player {
 /*         position: absolute; */
         display: flex;
-        padding-left: 200px;
+    transform: translateX(200px); /* Adjust the value as needed */
     }
     .draggable {
 /*         margin: 50px; /* Adjust margin to control overlap */ */
