--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -24,10 +24,11 @@
         position: absolute;
 /*         top: 50px;
         left: 50px; */
-        z-index: 2;
+        background-color: white; /* Set background color to white */
+
     }
     .draggable img {
-        width: 100%;
+        width: 20vw;
         height: auto;
         max-width: 100px;
         border: solid 2px black;
